--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,67 +1,50 @@
 {
   "name": "frontend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Crud for auth demo",
   "author": "Ryan Hancock",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "serve": "vue-cli-service serve --port=8070",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
-    "vue": "^2.5.2",
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11",
     "vue-json-pretty": "^1.6.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.6",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chalk": "^4.0.0",
-    "connect-history-api-fallback": "^1.4.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.5.3",
-    "cssnano": "^4.1.10",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^6.0.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^4.2.0",
-    "http-proxy-middleware": "^1.0.3",
-    "opn": "^6.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "ora": "^4.0.4",
-    "rimraf": "^3.0.2",
-    "semver": "^7.3.2",
-    "shelljs": "^0.8.4",
-    "sw-precache-webpack-plugin": "^1.0.0",
-    "uglify-es": "^3.1.3",
-    "url-loader": "^4.1.0",
-    "vue-loader": "^15.9.1",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0"
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-service": "~4.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
   },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not dead"
   ]
 }
